cmake_minimum_required(VERSION 3.14)
project(Mahjong)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE MahjongSRC_H ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE MahjongSrc ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_library(${PROJECT_NAME} STATIC ${MahjongSRC_H} ${MahjongSrc})
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
